--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p></p>
+          <p>Footer</p>
         </div>
       </footer>
     </div>
