--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="lead cover-text">Work hard everyday to make P Project one of the most recognise project</p>
         <p class="lead">
           <!-- Begin MailChimp Signup Form -->
-          <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+          <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css"> -->
           <style type="text/css">
             #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
             /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
