--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>P Project</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="animate.css">
 </head>
 
   <body class="startup text-center">
@@ -22,7 +23,7 @@
       </header>
 
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Mission</h1>
+        <h1 class="cover-heading animated swing">Mission</h1>
         <p class="lead cover-text">Work hard everyday to make P Project one of the most recognise project</p>
         <p class="lead">
           <!-- Begin MailChimp Signup Form -->
