--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body class="startup text-center">
 
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-      <header class="masthead mb-auto">
+      <header class="masthead mb-auto d-flex justify-content-center ">
         <div class="inner">
           <h3 class="masthead-brand">P Project</h3>
-          <nav class="nav nav-masthead justify-content-center">
+          <nav class="nav nav-masthead d-flex flex-row">
             <a class="nav-link active" href="#">Home</a>
             <a class="nav-link" href="#">Features</a>
             <a class="nav-link" href="#">Contact</a>
@@ -24,7 +24,12 @@
 
       <main role="main" class="inner cover">
         <h1 class="cover-heading animated swing">Mission</h1>
-        <p class="lead cover-text">Work hard everyday to make P Project one of the most recognise project</p>
+        <p class="lead cover-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <p class="lead">
           <!-- Begin MailChimp Signup Form -->
           <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css"> -->
@@ -38,7 +43,7 @@
               <div id="mc_embed_signup_scroll">
               <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
               <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_bc92a2384d252ea486be5b306_8b386935c8" tabindex="-1" value=""></div>
-              <div class="clear"><input class="btn btn-lg btn-secondary" type="submit" value="Dont Give Up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              <div class="clear"><input class="btn btn-lg btn-secondary" type="submit" value="Signup" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
               </div>
           </form>
           </div>
