--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body class="startup text-center">
 
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-      <header class="masthead mb-auto d-flex justify-content-center ">
-        <div class="inner">
+      <header class="masthead mb-auto d-flex justify-content-center">
+        <div class="inner d-flex flex-column">
           <h3 class="masthead-brand">P Project</h3>
-          <nav class="nav nav-masthead d-flex flex-row">
+          <nav class="nav nav-masthead d-flex justify-content-center">
             <a class="nav-link active" href="#">Home</a>
             <a class="nav-link" href="#">Features</a>
             <a class="nav-link" href="#">Contact</a>
