--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           <nav class="nav nav-masthead d-flex justify-content-center">
             <a class="nav-link active" href="#">Home</a>
             <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#">News</a>
+            <a class="nav-link" href="#">Team</a>
             <a class="nav-link" href="#">Contact</a>
           </nav>
         </div>
