--- a/Test Project/index2.html
+++ b/Test Project/index2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>JS DOM TEST</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>Shopping List</h1>
@@ -9,7 +10,7 @@
 	<input id="userinput" type="text" name="enter items" placeholder="Enter Items">
 	<button id="enter">Enter!</button>
 	<ul>
-		<li class="bold red" random="23"> Notebook </li>
+		<li>Notebook </li>
 		<li>Jello</li>
 		<li>Spinach</li>
 		<li>Rice</li>
