--- a/Test Project/index2.html
+++ b/Test Project/index2.html
@@ -3,15 +3,22 @@
 <head>
 	<title>JS DOM TEST</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body>
-	<h1>Shopping List</h1>
-	<p id="first">Get it done</p>
-	<input id="userinput" type="text" name="enter items" placeholder="Enter Items">
-	<button id="enter">Enter!</button>
-	<ul>
-	</ul>
+<body class="startup">
+<div class="d-flex justify-content-center flex-column align-items-center">
+	<header class="masthead mb-auto">
+	  <h1 class="masthead-brand">Shopping List</h1>
+	</header>
 
+	<main role="main" class="inner cover d-flex flex-column align-content-center col-5">
+		<h5 class="d-flex justify-content-center">Get it done</h5>
+		<input class="" id="userinput" type="text" name="enter items" placeholder="Enter Items">
+		<button class="btn btn-primary mb-3" id="enter">Enter!</button>
+		<ul class="d-flex justify-content-center flex-column align-items-center">
+		</ul>
+	</main>
+</div>
 
 
 	<script type="text/javascript" src="java2.js"></script>
